inventory_section_navs: large screens: prevent having horizontal scroll on users/groups lists

--- a/app/modules/inventory/scss/_inventory_section_navs.scss
+++ b/app/modules/inventory/scss/_inventory_section_navs.scss
@@ -37,6 +37,7 @@ $map-large-screen-heigth: 70vh;
   /*Large screens*/
   @media screen and (min-width: $smaller-screen) {
     .list-wrapper{
+      min-width: 14em;
       padding: 1em;
       ul{
         max-height: $map-large-screen-heigth;
